<resources>
    <string name="app_name">Lecteur de PDF</string>
    <string name="ajouter_un_pdf">Ajouter un PDF</string>
    <string name="ajouter_modifier_une_cat_gorie">Ajouter/Modifier une catégorie</string>
    <string name="modifier_un_pdf">Modifier un PDF</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="categorie">Catégorie :</string>
    <string name="trier_par">Trier par :</string>
    <string name="il_n_y_a_aucun_pdf">Il n\'y a aucun pdf !</string>
    <string name="options">*</string>
    <string name="retour"><![CDATA[<-]]></string>
    <string name="ajouter_supprimer_une_cat_gorie">Ajouter/Supprimer une catégorie</string>
    <string name="ajout">+</string>
    <string name="valider">√</string>
    <string name="nom_de_la_categorie">Nom de la catégorie</string>
</resources>